Ensure exim4-config is also purged from existing installs

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: purge exim-packages
   become: yes
   apt:
-    name: "{{ exim_packages }}"
+    name: "{{ exim_packages + exim_packages_purge_extra }}"
     purge: yes
     state: absent
 
