--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,6 +3,9 @@ exim_packages:
   - exim4-base
   - "{{ 'exim4-daemon-heavy' if exim_daemon_heavy|bool else 'exim4-daemon-light' }}"
 
+exim_packages_purge_extra:
+  - exim4-config
+
 # inverse of the to be installed daemone package
 # used for purging already installed daemon packages
 exim_daemon_purge: "{{ 'exim4-daemon-heavy' if not exim_daemon_heavy|bool else 'exim4-daemon-light' }}"
