--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Wolfgan Hotwagner
-  description: Installs and configures ClamAV
+  description: Installs and configures exim4
   company: AIT Austrian Institute of Technology
 
   # If the issue tracker for your role is not on github, uncomment the
