--- a/vars/main.yml
+++ b/vars/main.yml
@@ -9,3 +9,5 @@ exim_packages_purge_extra:
 # inverse of the to be installed daemone package
 # used for purging already installed daemon packages
 exim_daemon_purge: "{{ 'exim4-daemon-heavy' if not exim_daemon_heavy|bool else 'exim4-daemon-light' }}"
+
+exim_service_user: Debian-exim
