--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,3 +11,11 @@ exim_packages_purge_extra:
 exim_daemon_purge: "{{ 'exim4-daemon-heavy' if not exim_daemon_heavy|bool else 'exim4-daemon-light' }}"
 
 exim_service_user: Debian-exim
+
+exim_non_rf1918_cidrs: |
+  0.0.0.0/5 : 8.0.0.0/7 : 11.0.0.0/8 : 12.0.0.0/6 : 16.0.0.0/4 : 32.0.0.0/3 :\
+  64.0.0.0/2 : 128.0.0.0/3 : 160.0.0.0/5 : 168.0.0.0/6 : 172.0.0.0/12 :\
+  172.32.0.0/11 : 172.64.0.0/10 : 172.128.0.0/9 : 173.0.0.0/8 : 174.0.0.0/7 :\
+  176.0.0.0/4 : 192.0.0.0/9 : 192.128.0.0/11 : 192.160.0.0/13 : 192.169.0.0/16 :\
+  192.170.0.0/15 : 192.172.0.0/14 : 192.176.0.0/12 : 192.192.0.0/10 : 193.0.0.0/8 :\
+  194.0.0.0/7 : 196.0.0.0/6 : 200.0.0.0/5 : 208.0.0.0/4
